--- a/styles.less
+++ b/styles.less
@@ -41,6 +41,12 @@ atom-text-editor atom-text-editor-minimap.absolute.left, html atom-text-editor-m
 atom-text-editor .line{
   //line-height: 1.2em;
 }
+
+/* code line highlight */
+.cursor-line{
+  background-color: rgb(40, 50, 70) !important;
+}
+
 /* keywords */
 .syntax--storage,
 .syntax--keyword{
@@ -50,11 +56,13 @@ atom-text-editor .line{
 }
 /* integer */
 .syntax--constant.syntax--numeric{
-  color:rgb(236, 167, 48);
+  //color:rgb(236, 167, 48);
+  color: rgb(207, 121, 63);
 }
 /* string */
 .syntax--string {
-  color: rgb(207, 121, 63);
+  //color: rgb(207, 121, 63);
+  color: rgb(120, 120, 135);
 }
 /* variable */
 .syntax--variable {
@@ -82,14 +90,32 @@ atom-text-editor .line{
   background-color:rgb(40, 44, 52) !important;
 }*/
 .syntax--python .syntax--function{
-  background-color:rgb(49, 58, 71);
+  //background-color:rgb(49, 58, 71);
 }
 .syntax--python .syntax--entity{
   background:none;
 }
 /* whole class line */
 .syntax--python .syntax--class{
-  background-color: #313a47 !important;
+  //background-color: #313a47 !important;
+}
+/* docstrings and comments */
+//.syntax--line .syntax--python, .syntax--line
+.syntax--python .syntax--comment,
+.syntax--python .syntax--block .syntax--string,
+.syntax--python .syntax--block{
+  background-color:rgb(70, 75, 85) !important;
+  color:#fff !important;
+  font-style:normal !important;
+  font-family:"Lucida Console" !important;
+  font-size:0.9em;
+  line-height:0 !important;
+  padding:4px 0px 3px 0px!important;
+  margin:0px !important;
+}
+/* leading whitespace */
+.syntax--python .syntax--leading{
+  background-color:rgba(40, 44, 52, 0) !important;
 }
 
 .outline-view-core .outline-view-trees li.list-item.outline-view-item {
