--- a/styles.less
+++ b/styles.less
@@ -32,7 +32,7 @@
 }
 
 // docstring whitespace
-.syntax--python .leading-whitespace{
+.syntax--python .syntax--leading{
   background-color:rgb(37, 41, 49) !important;
 }
 
@@ -69,9 +69,9 @@
 }
 
 // constants
-.syntax--python .syntax--item-access{
-  color:#86593b;
-}
+// .syntax--python .syntax--item-access{
+//   color:#86593b;
+// }
 
 // properties
 .syntax--python .syntax--property{
@@ -87,7 +87,7 @@
 
 // integers
 .syntax--python .syntax--decimal{
-  color:#cf793f;
+  color:#d28338;
   font-weight:bold;
 }
 
@@ -98,7 +98,8 @@
 .syntax--python .syntax--separator,
 .syntax--python .syntax--dictionary .syntax--valuepair,
 .syntax--python .syntax--assignment,
-.syntax--python .syntax--punctuation{
+.syntax--python .syntax--punctuation,
+.syntax--python .syntax--arithmetic{
   color:#bbb7a8 !important;
   font-weight:bold;
 }
