--- a/styles.less
+++ b/styles.less
@@ -32,6 +32,7 @@
 }
 
 // docstring whitespace
+.syntax--python .leading-whitespace,
 .syntax--python .syntax--leading{
   background-color:rgb(37, 41, 49) !important;
 }
