--- a/styles.less
+++ b/styles.less
@@ -67,6 +67,7 @@
 .syntax--python .syntax--variable,
 .syntax--python .syntax--separator{
   color:#abb2bf !important;
+  font-weight:normal;
 }
 
 // constants
@@ -96,7 +97,7 @@
 // integers
 .syntax--python .syntax--decimal{
   color:#d28338;
-  //font-weight:bold;
+  font-weight:normal;
 }
 
 // operators and symbols
@@ -108,8 +109,8 @@
 .syntax--python .syntax--assignment,
 .syntax--python .syntax--punctuation,
 .syntax--python .syntax--arithmetic,
-.syntax--python .syntax--function .syntax--meta,
-.syntax--python .syntax--comparison{
+.syntax--python .syntax--comparison,
+.syntax--python .syntax--parameters{
   color:#455a81 !important;
   font-weight:bold;
 }
