--- a/styles.less
+++ b/styles.less
@@ -235,3 +235,13 @@ atom-text-editor{
 .tree-view .tree-view-root {
   padding-right:0px;
 }
+
+.line {
+  transition: .2s ease-in;
+}
+.line .cursor-line {
+  background-color: @base-background-color;
+  text-shadow: 3px 10px 25px rgba(0,0,0,1);
+  padding: 5px 0;
+  border-left: 3px solid #ff4500;
+}
