--- a/styles.less
+++ b/styles.less
@@ -88,7 +88,9 @@
   font-style:italic;
 }
 
-// bools
+// bools and other words
+//.syntax--python .syntax--language,
+.syntax--python .syntax--parameters .syntax--language,
 .syntax--python .syntax--value .syntax--language{
   color:#9f4b47 !important;
   font-style:italic;
@@ -237,7 +239,7 @@ atom-text-editor{
 }
 
 .line {
-  transition: .2s ease-in;
+  //transition: .5s ease-in;
 }
 .line .cursor-line {
   background-color: @base-background-color;
